# bitrix24_sdk

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
bitrix24_sdk/: __init__.py
bitrix24_sdk/base/: __init__.py  models.py  service.py
bitrix24_sdk/bitrix_http/: __init__.py  client.py  http_client.py
bitrix24_sdk/config/: __init__.py  bitrix_settings.json  config.py
bitrix24_sdk/crm/: __init__.py  models.py  service.py
bitrix24_sdk/disk/: __init__.py  models.py  service.py
bitrix24_sdk/utils/: __init__.py  models.py
