[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitrix24-sdk"
version = "0.1.0"
description = "Python SDK for Bitrix24 API"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "requests>=2.28.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bitrix24_sdk*"]
